# C-WebSocket-Client-with-GN-Build-System

./: .gitignore  .gn  BUILD.gn  README.md  build_config.gn  main.cpp  websocket_server.py
.github/workflows/: ci.yml
benchmarks/: benchmark_client.cpp
include/: config.h  connection_manager.h  latency_stats.h  memory_pool.h  message.h  secure_websocket_client.h  spsc_queue.h  thread_utils.h  websocket_client.h
src/: main.cpp
tests/: test_latency_stats.cpp  test_memory_pool.cpp  test_spsc_queue.cpp
